baml_language/crates/baml_tests/snapshots/diagnostic_errors/lexical_scoping_errors/baml_tests__diagnostic_errors__lexical_scoping_errors__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.block_does_not_leak(b: bool) -> int  [expr] {
  { if (b) { let a = 1 } } a
}
function user.for_binding_does_not_leak() -> int  [expr] {
  { for x in [1, 2] { x } } x
}
function user.standalone_block_does_not_leak() -> int  [expr] {
  { { let x = 1 } } x
}
