baml_language/crates/baml_tests/snapshots/diagnostic_errors/lexical_scoping_errors/baml_tests__diagnostic_errors__lexical_scoping_errors__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 33468
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved name: a
   ╭─[ lexical_scoping_errors.baml:5:3 ]
   │
 5 │   a
   │   ┬  
   │   ╰── unresolved name: a
   │ 
   │ Note: Error code: E0003
───╯

  [type] Error: unresolved name: x
    ╭─[ lexical_scoping_errors.baml:12:3 ]
    │
 12 │   x
    │   ┬  
    │   ╰── unresolved name: x
    │ 
    │ Note: Error code: E0003
────╯

  [type] Error: unresolved name: x
    ╭─[ lexical_scoping_errors.baml:19:3 ]
    │
 19 │   x
    │   ┬  
    │   ╰── unresolved name: x
    │ 
    │ Note: Error code: E0003
────╯
